# CSC-271

./: CMakeLists.txt  HW3 doc.txt  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
include/: mesh.h  shaderprogram.h
shaders/: fragment.frag  fragment2.frag  vertex.vert  vertex2.vert
src/: mesh.cpp  shaderprogram.cpp  stb_image.cpp
